--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">Advertisement</string>
     <string name="interstital_adUnit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="banner_adUnit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="banner_ad">Banner Ad</string>
+    <string name="interstitial_ad">Interstitial Ad</string>
+    <string name="native_advanced_ad">Native Advanced Ad</string>
+    <string name="action_settings">Settings</string>
+    <string name="impossible_game">Impossible Game</string>
+    <string name="retry_button_text">Retry</string>
+    <string name="watch_video_button_text">Watch Video for 10 additional coins</string>
+    <string name="default_coin_text">Coins: 0</string>
+    <string name="reward_ad">Reward Ad</string>
 </resources>
